--- a/css/pixyll.css
+++ b/css/pixyll.css
@@ -1067,6 +1067,15 @@ blue      #268bd2  reserved keywords
 cyan      #2aa198  strings, numbers
 green     #859900  operators, other keywords
 */
+.highlight pre code * {
+  white-space: nowrap; }
+
+.highlight pre {
+  overflow-x: auto; }
+
+.highlight pre code {
+  white-space: pre; }
+
 .highlight,
 .gist-syntax .highlight {
   background-color: #002b36;
